# tstore-cli

./: Cargo.toml  README.md
src/: commands.rs  main.rs  models.rs
src/commands/: download.rs  info.rs  publish.rs
src/models/: community_listing.rs  package_info.rs  package_version.rs
